<resources>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="app_name">Image App</string>
    <string name="app_name_leica">Image Shuttle</string>
    <string name="av_no_name">AV device</string>
    <string name="baby_monitor">Baby Monitor</string>
    <string name="babymon_cannot_operation">This function is not available when using the Baby Monitor function.</string>
    <string name="babymon_cant_regstid">"Could not connect to the server.
The notification function cannot be used."</string>
    <string name="babymon_mic_resttime">%02d seconds left</string>
    <string name="bracket_shooted_suspended">Bracketed shooting suspended.</string>
    <string name="bracket_shooted_suspended_unable_recharge">Bracketed shooting suspended because flash was unable recharge.</string>
    <string name="btn_ask_idsync_no">Do not copy</string>
    <string name="btn_ask_idsync_yes">Copy</string>
    <string name="btn_geotag_not_takeover">Don’t Update</string>
    <string name="btn_geotag_takeover">Update</string>
    <string name="btn_geotag_takeover_delete">Erase</string>
    <string name="btn_phcol_change_frame">Change frame</string>
    <string name="btn_phcol_change_photo">Change still picture</string>
    <string name="cam_command_msg_check_camera">Check the camera unit.</string>
    <string name="cam_command_msg_sending">Communicating with the camera...</string>
    <string name="cam_command_msg_sending_error">An error occurred during communication with the camera.</string>
    <string name="camera_ap_password">Password:</string>
    <string name="camera_ap_ssid">SSID:</string>
    <string name="cinelike_dolly_zoom">Dolly Zoom</string>
    <string name="cinelike_slow_quick">Slow/Quick</string>
    <string name="cloud_msg_cancel">Cancel?</string>
    <string name="cloud_msg_canceled">Cancelled.</string>
    <string name="cloud_msg_no_update">Update unnecessary.</string>
    <string name="cloud_msg_update">Update?</string>
    <string name="cloud_msg_update_error">Update failed.</string>
    <string name="cloud_msg_updated">Update completed.</string>
    <string name="cloud_msg_updating">Updating...</string>
    <string name="cm_msg_error_cloud_save_local">Due to an error, some images were not saved.</string>
    <string name="cm_msg_remain">Time remaining:</string>
    <string name="cmn_auto_cloud_backup">Automatic Backup</string>
    <string name="cmn_bluetooth">Bluetooth</string>
    <string name="cmn_bluetooth_setting">Bluetooth Setup</string>
    <string name="cmn_bluetooth_setting_short">Bluetooth Setup</string>
    <string name="cmn_bt_remote_controller">Shutter Remote Control</string>
    <string name="cmn_bt_remote_controller_title">Shutter Remote Control</string>
    <string name="cmn_btn_cancel">Cancel</string>
    <string name="cmn_btn_close">Close</string>
    <string name="cmn_btn_detail">Details</string>
    <string name="cmn_btn_dicision">Set</string>
    <string name="cmn_btn_end">Exit</string>
    <string name="cmn_btn_execute">Execute</string>
    <string name="cmn_btn_execute_short">Execute</string>
    <string name="cmn_btn_ok">OK</string>
    <string name="cmn_btn_reset">Reset</string>
    <string name="cmn_btn_save">Save</string>
    <string name="cmn_btn_update">Update</string>
    <string name="cmn_build_number">Build number</string>
    <string name="cmn_camera_setting">Camera settings</string>
    <string name="cmn_camera_setting_copy">Camera settings copy</string>
    <string name="cmn_camera_setting_copy2">"Camera settings
copy"</string>
    <string name="cmn_camera_setting_copy3">Camera settings copy</string>
    <string name="cmn_camera_setting_delete">Delete</string>
    <string name="cmn_camera_setting_rename">Changing the name</string>
    <string name="cmn_camera_setting_save">Save setting</string>
    <string name="cmn_camera_setting_saved_settings">Saved camera settings</string>
    <string name="cmn_camera_setting_send_camera">Send to camera</string>
    <string name="cmn_card_protected">The card is locked. Unlock it.</string>
    <string name="cmn_cloud_backup">Backup to cloud</string>
    <string name="cmn_cloud_backup1">Cloud backup</string>
    <string name="cmn_cloud_backup_ap_ssid">Connection information of wireless access point (SSID)</string>
    <string name="cmn_cloud_backup_connect_ap">WAP to be connected</string>
    <string name="cmn_cloud_backup_connection_test">Connection test</string>
    <string name="cmn_cloud_backup_picmate_settings">Cloud setting</string>
    <string name="cmn_cloud_backup_remove_location_data">Delete Location Data</string>
    <string name="cmn_cloud_backup_send_size">Size</string>
    <string name="cmn_cloud_backup_send_size_l">L</string>
    <string name="cmn_cloud_backup_send_size_m">M</string>
    <string name="cmn_cloud_backup_send_size_org">Original</string>
    <string name="cmn_cloud_backup_send_size_s">S</string>
    <string name="cmn_cloud_backup_send_size_vga">VGA</string>
    <string name="cmn_cloud_backup_start">Start</string>
    <string name="cmn_cloud_backup_start_backup">Start backup</string>
    <string name="cmn_cloud_backup_terminate">Cancel</string>
    <string name="cmn_next">Next</string>
    <string name="cmn_skip">Skip</string>
    <string name="easywifi_setting_mimamori_title">Home Monitor Setup</string>
    <string name="highlight_option_effect">EFFECT</string>
    <string name="highlight_option_playtime">Playback time</string>
    <string name="highlight_option_priority">Face Detection priority</string>
    <string name="movieslideshow_option_bgm">Background music</string>
    <string name="movieslideshow_option_bgm_setting">Audio settings</string>
    <string name="movieslideshow_save_format">Storage format</string>
    <string name="movieslideshow_setting_bgm">When enabled, you can specify the background music at run time.</string>
    <string name="movieslideshow_setting_title">When enabled, you can specify the title picture at run time.</string>
    <string name="movieslideshow_title_settings">Title settings</string>
    <string name="ply_action_camera_power_off">Power OFF</string>
    <string name="rec_btn_quick_menu">Set</string>
    <string name="setup_app_setting">Application function</string>
    <string name="setup_ask_camera_power_off">Turn OFF the connected device?</string>
    <string name="setup_btn_power_off">Power OFF</string>
    <string name="setup_connect">Set connect. dest.</string>
    <string name="setup_easy_wifi_hmmon_cam_id">"The camera's Home Monitor device ID"</string>
    <string name="setup_easy_wifi_hmmon_exp">The Home Monitor device ID that is necessary to start the Home Monitor function can be acquired from the camera.</string>
    <string name="setup_easy_wifi_hmmon_sp_id">"The smartphone's Home Monitor device ID"</string>
    <string name="setup_easy_wifi_not_registerd">Not registered</string>
    <string name="setup_help">Help</string>
    <string name="setup_off">OFF</string>
    <string name="setup_on">ON</string>
    <string name="setup_picmate_activate">Start LUMIX CLUB function use</string>
    <string name="setup_picmate_already_have_id">If you already have a login ID</string>
    <string name="setup_picmate_btn_new_regist">Sign up</string>
    <string name="setup_picmate_btn_regist">Register</string>
    <string name="setup_picmate_btn_sync_login_id">Register the same LUMIX CLUB login ID as the camera</string>
    <string name="setup_picmate_btn_unregist">Do not register</string>
    <string name="setup_picmate_cam_or_app_have_id">If you want to use the same login ID for both this app and the camera</string>
    <string name="setup_picmate_cloud">Cloud sync. settings</string>
    <string name="setup_picmate_cloud_action_capacity_over">Action:Limit exceeded</string>
    <string name="setup_picmate_cloud_action_confirm_update">Confirm update</string>
    <string name="setup_picmate_cloud_auto_sync">Sync automatically</string>
    <string name="setup_picmate_cloud_picsize_recieving">Image size (download)</string>
    <string name="setup_picmate_cloud_picsize_sending">Image size (upload)</string>
    <string name="setup_picmate_cloud_using">Use Cloud sync.</string>
    <string name="setup_picmate_label_login_id">Login ID</string>
    <string name="setup_picmate_label_login_password">Password</string>
    <string name="setup_picmate_label_login_password_check">Confirm password</string>
    <string name="setup_picmate_label_login_regist2">Enter the registration password</string>
    <string name="setup_picmate_manage_id">Manage login ID</string>
    <string name="setup_picmate_not_have_id">If you do not have a login ID</string>
    <string name="setup_picmate_regist_service">Regist. Web Service</string>
    <string name="setup_picmate_service_sync">Service list sync</string>
    <string name="setup_picmate_title_login_info">Enter the log-in information</string>
    <string name="setup_picmate_title_login_regist">Enter a password for registration</string>
    <string name="setup_picmate_upload_image">Uploaded images</string>
    <string name="setup_ply_picture_sort">Picture Sort</string>
    <string name="setup_set_picmate_id_to_camera">Set camera login ID</string>
    <string name="setup_smaope_camera_picsize">Size: Copy from Camera</string>
    <string name="setup_smaope_delete_gps">Erase Upload Loc.</string>
    <string name="setup_smaope_download_file_format">Saving format of RAW+JPEG images</string>
    <string name="setup_smaope_picamate">LUMIX CLUB settings</string>
    <string name="setup_smaope_picjmp">\"Picture Share \" Settings</string>
    <string name="setup_smaope_player_select">Select Video Player</string>
    <string name="setup_smaope_player_select_summary_off">Play back using the Image App player</string>
    <string name="setup_smaope_player_select_summary_on">Select player and play back</string>
    <string name="setup_smaope_web_picsize">Size: Upl. to Web</string>
    <string name="setup_smaope_work_charging">Transfer:Charge only</string>
    <string name="setup_smaope_work_wifi_connecting">Transfer:Wi-Fi only</string>
    <string name="setup_smart_operation">Playback settings</string>
    <string name="setup_terms">Terms of use</string>
</resources>