<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/setup_ply_picture_sort_string" android:title="@string/setup_ply_picture_sort" android:key="PlaySort" android:summary="" android:defaultValue="PlaySortName" android:dialogTitle="@string/setup_ply_picture_sort" android:entryValues="@array/setup_ply_picture_sort_string_value" />
    <PreferenceScreen android:title="@string/setup_smaope_picjmp" android:key="PictureJumpSetup" />
    <ListPreference android:entries="@array/setup_smaope_camera_picsize_string" android:title="@string/setup_smaope_camera_picsize" android:key="PlayCameraRecievePicsize" android:summary="" android:defaultValue="PlayPicsizeLarge" android:dialogTitle="@string/setup_smaope_camera_picsize" android:entryValues="@array/setup_smaope_camera_picsize_value" />
    <ListPreference android:entries="@array/setup_ply_rawjpeg_string" android:title="@string/setup_smaope_download_file_format" android:key="PlayCameraRecieveRawJpeg" android:summary="" android:defaultValue="PlayPickindJPEG" android:dialogTitle="@string/setup_smaope_download_file_format" android:entryValues="@array/setup_ply_rawjpeg_string_value" />
    <ListPreference android:entries="@array/setup_smaope_web_picsize_string" android:title="@string/setup_smaope_web_picsize" android:key="PlayWebSendPicsize" android:summary="" android:defaultValue="PlayPicsizeRMD" android:dialogTitle="@string/setup_smaope_web_picsize" android:entryValues="@array/setup_smaope_web_picsize_value" />
    <CheckBoxPreference android:title="@string/setup_smaope_delete_gps" android:key="PlaySendingDeletGps" android:defaultValue="true" android:summaryOn="@string/setup_on" android:summaryOff="@string/setup_off" />
    <PreferenceScreen android:title="@string/setup_smaope_picamate" android:key="PicmateSetting" />
    <CheckBoxPreference android:title="@string/setup_smaope_player_select" android:key="LocalMoviePlayerSelection" android:defaultValue="false" android:summaryOn="@string/setup_smaope_player_select_summary_on" android:summaryOff="@string/setup_smaope_player_select_summary_off" />
</PreferenceScreen>