<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:binding="http://www.gueei.com/android-binding/">
    <group android:id="@id/menu_group1" android:orderInCategory="100">
        <item android:id="@id/menu_setup_connect" android:orderInCategory="100" android:title="@string/setup_connect" />
        <item android:id="@id/menu_setup_smart_operation" android:orderInCategory="100" android:title="@string/setup_smart_operation" />
        <item android:id="@id/menu_setup_app_setting" android:orderInCategory="100" android:title="@string/setup_app_setting" />
        <item android:id="@id/menu_setup_help" android:orderInCategory="100" android:title="@string/setup_help" />
        <item android:id="@id/menu_setup_terms" android:orderInCategory="100" android:title="@string/setup_terms" />
    </group>
</menu>