<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <intent android:targetPackage="com.panasonic.avc.cng.imageapp" android:action="android.intent.action.MAIN" android:targetClass="com.panasonic.avc.cng.view.play.movieslideshow.MovieSlideshowActivity" />
    <ListPreference android:entries="@array/list_effect_wearable" android:title="@string/highlight_option_effect" android:key="MovieSlideshow_effect" android:summary="" android:defaultValue="1" android:dialogTitle="@string/highlight_option_effect" android:entryValues="@array/list_effect_wearable_values" />
    <ListPreference android:entries="@array/list_audio" android:title="@string/movieslideshow_option_bgm_setting" android:key="MovieSlideshow_soundsettings" android:summary="" android:defaultValue="0" android:dialogTitle="@string/movieslideshow_option_bgm_setting" android:entryValues="@array/list_audio_value" />
    <CheckBoxPreference android:title="@string/movieslideshow_title_settings" android:key="MovieSlideshowTitleCheck" android:summary="@string/movieslideshow_setting_title" android:defaultValue="false" />
    <ListPreference android:entries="@array/list_save_format" android:title="@string/movieslideshow_save_format" android:key="MovieSlideshow_save_format" android:summary="" android:defaultValue="0" android:dialogTitle="@string/movieslideshow_save_format" android:entryValues="@array/list_save_format_value" />
</PreferenceScreen>