<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffffff" android:id="@id/easywifi_mimamori_top_text" android:background="#ff555555" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/easywifi_setting_mimamori_title" android:layout_alignParentTop="true" />
    <TextView android:textColor="#ffffffff" android:id="@id/easywifi_mimamori_comment_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/setup_easy_wifi_hmmon_exp" android:layout_below="@id/easywifi_mimamori_top_text" />
    <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/easywifi_mimamori_camera_id_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/setup_easy_wifi_hmmon_cam_id" android:layout_below="@id/easywifi_mimamori_comment_text" />
    <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/easywifi_mimamori_camera_id_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_below="@id/easywifi_mimamori_camera_id_msg" />
    <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/easywifi_mimamori_phone_id_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/setup_easy_wifi_hmmon_sp_id" android:layout_below="@id/easywifi_mimamori_camera_id_text" />
    <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/easywifi_mimamori_phone_id_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/setup_easy_wifi_not_registerd" android:layout_below="@id/easywifi_mimamori_phone_id_msg" />
    <LinearLayout android:orientation="horizontal" android:id="@id/easywifi_mimamori_btn_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_alignParentBottom="true">
        <Button android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cmn_skip" android:layout_weight="1.0" android:onClick="onClickSkip" />
        <Button android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cmn_next" android:layout_weight="1.0" android:onClick="onClickNext" />
    </LinearLayout>
</RelativeLayout>