<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:background="@drawable/title_base_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ply_action_camera_power_off" />
    <TextView android:id="@id/cameraPowerOffText" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setup_ask_camera_power_off" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cameraPowerOffButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setup_btn_power_off" android:layout_weight="1.0" android:onClick="OnClickOK" />
        <Button android:id="@id/cameraPowerOffCancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cmn_btn_cancel" android:layout_weight="1.0" android:onClick="OnClickCancel" />
    </LinearLayout>
</LinearLayout>