<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:background="@drawable/title_base_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_picmate_title_login_regist" android:scrollHorizontally="false" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_picmate_label_login_regist2" android:scrollHorizontally="false" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_picmate_label_login_password" android:scrollHorizontally="false" />
        <EditText android:id="@id/PicMateCreatePassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_picmate_label_login_password_check" android:scrollHorizontally="false" />
        <EditText android:id="@id/PicMateCheckPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_picmate_btn_regist" android:onClick="onAgreeButton" />
            <Button android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setup_picmate_btn_unregist" android:onClick="onDisagreeButton" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/HideLayout2" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>